fix: visibility of select input selected
... which is partially hidden if it's a long one e.g. some of those FormA ImmigrationStatuses are (too) long.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -31,6 +31,11 @@ body {
   white-space: nowrap;
 }
 
+.react-select__single-value,
+.react-select__option {
+  white-space: normal !important;
+}
+
 [data-amplify-authenticator] {
   font-family: "Frutiger W01", Arial, sans-serif;
   background-color: #005eb8;
